--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.4.1",
     "install": "^0.13.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
