--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.10.8",
     "firebase": "^9.4.1",
     "install": "^0.13.0",
     "react": "^17.0.2",
