--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
   "devDependencies": {
     "json-loader": "^0.5.7"
   },
-  "hompage": "https://real-bird.github.io/save2day"
+  "hompage": "https://Real-Bird.github.io/save2day"
 }
